@@ -7,9 +7,9 @@ compute advanced nodeset operations
 -----------------------------------
 
 :Author: Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
-:Date:   2012-03-31
+:Date:   2012-07-09
 :Copyright: CeCILL-C V1
-:Version: 1.6
+:Version: 1.7
 :Manual section: 1
 :Manual group: ClusterShell User Manual
 
@@ -120,6 +120,12 @@ Example of advanced usage
   :$ nodeset -f @gpu^@slurm\:bigmem!@chassis[1-9/2]:
 
   This computes a folded nodeset containing nodes found in group @gpu and @slurm:bigmem, but not in both, minus the nodes found in odd chassis groups from 1 to 9.
+
+"All nodes" extension (v1.7+)
+  The ``@*`` and ``@SOURCE:*`` special notations may be used in extended patterns to represent all nodes (in SOURCE) according to the *all* external shell command (see ``groups.conf``\(5)) and are equivalent to:
+
+    :$ nodeset -f -a [-s SOURCE]:
+
 
 
 EXIT STATUS
